<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".espresso.EspressoActivityFirst">

    <EditText
        android:id="@+id/espresso_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:inputType="textPersonName"
        android:ems="10"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="52dp"
        app:layout_constraintBottom_toTopOf="@+id/espresso_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/espresso_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/espresso_button" />

    <Button
        android:id="@+id/espresso_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="button for click"
        android:onClick="espressoChangeTextButton"
        android:text="Button"
        app:layout_constraintBottom_toTopOf="@+id/espresso_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/espresso_edit_text" />

    <Button
        android:id="@+id/espresso_button_start_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="32dp"
        android:onClick="toOtherActivityButton"
        android:text="to other activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/espresso_text_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/espresso_button_hidden"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/espresso_button_hidden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:onClick="hideTextButton"
        android:text="Скрыть текст"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/get_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:onClick="getPhoneNumberButton"
        android:text="get Number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/espresso_text_view3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="44dp"
        android:text="phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/get_phone_number" />

</androidx.constraintlayout.widget.ConstraintLayout>